test/testdata/classes/instance/not_indexable_assignment_error.lox
class Foo {}
Foo()[0] = 0; // error: 'Foo' value is not indexable
